Hiding validation field

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -180,7 +180,8 @@ $gform-gutter-width: 10px;
 
 	}
 
-	&.gfield_visibility_hidden {
+	&.gfield_visibility_hidden
+	&.gform_validation_container {
 		display: none;
 	}
 
