--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -28657,7 +28657,7 @@ body.mobile-menu-active {
     -webkit-box-shadow: inset 0 -2px #D11141;
             box-shadow: inset 0 -2px #D11141; }
 
-.gfield.gfield_visibility_hidden {
+.gfield.gfield_visibility_hidden .gfield.gform_validation_container {
   display: none; }
 
 .gfield.no-label .gfield_label, .gfield.hidden_label .gfield_label {
