--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -243,3 +243,35 @@
 		}
 	}
 }
+
+#mobile-menu-toggle {
+	#header.is-sticky & {
+		.label {
+			color: #fff;
+		}
+		.icon,
+		.icon::before,
+		.icon::after {
+			background-color: #fff;
+		}
+	}
+}
+
+#mobile-menu-primary-navigation-menu {
+	> .menu-item {
+		> .sub-menu {
+			font-size: 1.25rem;
+			> .menu-item {
+				&:first-child {
+					// padding-top: 1rem;
+				}
+				&:last-child {
+					padding-bottom: 1rem;
+				}
+				a {
+					padding: .25rem 1rem;
+				}
+			}
+		}
+	}
+}
