--- a/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
@@ -21527,6 +21527,22 @@ nav.pagination {
   min-height: calc(100% + 8vh);
   top: -4vh; }
 
+.wp-block-crown-blocks-container.is-style-inset-border > .container-bg::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+  right: 1rem;
+  bottom: 1rem;
+  border: 1px solid #032040; }
+
+.wp-block-crown-blocks-container.is-style-inset-border.text-color-light > .container-bg::after {
+  border-color: #fff; }
+
+.wp-block-crown-blocks-container.is-style-inset-border.text-color-dark > .container-bg::after {
+  border-color: #032040; }
+
 /*	Multi-Column
 ---------------------------------------------------------*/
 .wp-block-crown-blocks-multi-column.relative-to-container-width > .inner > .multi-column-columns {
@@ -30509,16 +30525,161 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
   .wp-block-crown-blocks-grid.is-style-dividers.column-breakpoint-xs.column-spacing-xl-16 > .inner > .grid-columns > .inner > .wp-block-crown-blocks-grid-cell > .inner:before, .wp-block-crown-blocks-grid.is-style-dividers.column-breakpoint-sm.column-spacing-xl-16 > .inner > .grid-columns > .inner > .wp-block-crown-blocks-grid-cell > .inner:before, .wp-block-crown-blocks-grid.is-style-dividers.column-breakpoint-md.column-spacing-xl-16 > .inner > .grid-columns > .inner > .wp-block-crown-blocks-grid-cell > .inner:before, .wp-block-crown-blocks-grid.is-style-dividers.column-breakpoint-lg.column-spacing-xl-16 > .inner > .grid-columns > .inner > .wp-block-crown-blocks-grid-cell > .inner:before, .wp-block-crown-blocks-grid.is-style-dividers.column-breakpoint-xl.column-spacing-xl-16 > .inner > .grid-columns > .inner > .wp-block-crown-blocks-grid-cell > .inner:before {
     left: -8rem; } }
 
-.wp-block-crown-blocks-multi-column.overlap-left-column > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column:nth-child(1) {
-  z-index: 1; }
+@media (min-width: 768px) {
+  .wp-block-crown-blocks-multi-column.overlap-left-column > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column:nth-child(1) {
+    z-index: 1; }
+  .wp-block-crown-blocks-multi-column.overlap-left-column > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column:nth-child(2) > .inner > .column-contents {
+    margin-left: -20%;
+    width: 120%; }
+    .wp-block-crown-blocks-multi-column.overlap-left-column > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column:nth-child(2) > .inner > .column-contents > .inner > .wp-block-crown-blocks-container {
+      padding-left: 16.6666667%; } }
 
-.wp-block-crown-blocks-multi-column.overlap-left-column > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column:nth-child(2) > .inner > .column-contents {
-  margin-left: -20%;
-  width: 120%; }
+@media (min-width: 768px) {
+  .wp-block-crown-blocks-multi-column.overlap-right-column > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column:nth-child(1) {
+    margin-right: -20%;
+    width: 120%; }
+    .wp-block-crown-blocks-multi-column.overlap-right-column > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column:nth-child(1) > .inner > .wp-block-crown-blocks-container {
+      padding-right: 16.6666667%; }
+  .wp-block-crown-blocks-multi-column.overlap-right-column > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column:nth-child(2) > .inner > .column-contents {
+    z-index: 1; } }
 
-.wp-block-crown-blocks-multi-column.overlap-right-column > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column:nth-child(1) {
-  margin-right: -20%;
-  width: 120%; }
-
-.wp-block-crown-blocks-multi-column.overlap-right-column > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column:nth-child(2) > .inner > .column-contents {
-  z-index: 1; }
+.wp-block-crown-blocks-featured-client-story-slider {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .wp-block-crown-blocks-featured-client-story-slider > .inner {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: #343a40; }
+  .wp-block-crown-blocks-featured-client-story-slider .post-feed {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner {
+    position: relative;
+    width: 100%; }
+    .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner::before {
+      content: '';
+      position: absolute;
+      right: 0;
+      top: calc(50% - 1px);
+      width: 6rem;
+      border-top: 2px solid #fff;
+      z-index: 99; }
+    .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner .slick-list,
+    .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner .slick-track {
+      height: 100%; }
+    .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+      .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a {
+        width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        position: relative;
+        padding-right: 6rem;
+        padding-left: 6rem;
+        color: #fff; }
+        .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a:hover > .bg .bg-image {
+          opacity: .2; }
+        .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a:hover .entry-title {
+          -webkit-text-decoration-color: #0381c3;
+                  text-decoration-color: #0381c3; }
+        .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a > .bg {
+          position: absolute;
+          left: 0;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          overflow: hidden;
+          background-color: #0381C3; }
+          .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a > .bg .bg-image {
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            opacity: .1;
+            -webkit-transition: opacity .5s;
+            transition: opacity .5s; }
+        .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a > .inner {
+          position: relative;
+          width: 100%;
+          padding: 4rem; }
+          @media (min-width: 576px) {
+            .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a > .inner {
+              padding-top: 6rem;
+              padding-bottom: 6rem; } }
+        .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a .entry-title {
+          -webkit-transition: -webkit-text-decoration-color .2s;
+          transition: -webkit-text-decoration-color .2s;
+          transition: text-decoration-color .2s;
+          transition: text-decoration-color .2s, -webkit-text-decoration-color .2s;
+          margin-bottom: 0; }
+        .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a .entry-industries {
+          display: block !important;
+          margin-top: 2rem;
+          border-bottom: 2px solid #fff;
+          padding-bottom: 1rem; }
+          .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a .entry-industries .industry {
+            display: inline-block;
+            line-height: 1.2;
+            font-weight: 700;
+            font-size: 0.625rem;
+            letter-spacing: .05em;
+            text-transform: uppercase;
+            border-radius: 10rem;
+            border: 1px solid #fff;
+            padding: .5rem .75rem;
+            color: inherit; }
+        .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a .btn-link, .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner .wp-block-crown-blocks-featured-post-slider article > a .entry-link a, .wp-block-crown-blocks-featured-post-slider .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner article > a .entry-link a {
+          color: #fff; }
+    .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner .slick-arrow {
+      width: 6rem;
+      height: 8rem;
+      background-color: transparent;
+      border-radius: 0;
+      display: block;
+      opacity: .5;
+      -webkit-transition: opacity .2s;
+      transition: opacity .2s;
+      overflow: hidden;
+      text-indent: -10000px;
+      border: none;
+      position: absolute;
+      right: 0;
+      outline: none;
+      z-index: 100; }
+      .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner .slick-arrow:hover {
+        opacity: 1; }
+      .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner .slick-arrow.slick-prev {
+        top: calc(50% - 8rem);
+        -webkit-transform: rotateY(180deg);
+                transform: rotateY(180deg); }
+      .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner .slick-arrow.slick-next {
+        margin-left: 0;
+        top: 50%; }
+      .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner .slick-arrow::before {
+        content: '';
+        background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23fff" class="bi bi-chevron-compact-right" viewBox="0 0 16 16"%3e%3cpath fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"/%3e%3c/svg%3e');
+        background-size: contain;
+        background-repeat: no-repeat;
+        position: absolute;
+        width: 2.75rem;
+        height: 2.75rem;
+        left: calc(50% - (2.75rem / 2));
+        top: calc(50% - (2.75rem / 2)); }
