--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -499,24 +499,190 @@
 
 .wp-block-crown-blocks-multi-column {
 	&.overlap-left-column {
-		> .inner > .multi-column-columns > .inner {
-			> .wp-block-crown-blocks-column:nth-child(1) {
-				z-index: 1;
-			}
-			> .wp-block-crown-blocks-column:nth-child(2) > .inner > .column-contents {
-				margin-left: -20%;
-				width: 120%;
+		@include media-breakpoint-up(md) {
+			> .inner > .multi-column-columns > .inner {
+				> .wp-block-crown-blocks-column:nth-child(1) {
+					z-index: 1;
+				}
+				> .wp-block-crown-blocks-column:nth-child(2) > .inner > .column-contents {
+					margin-left: -20%;
+					width: 120%;
+					> .inner {
+						> .wp-block-crown-blocks-container {
+							padding-left: 16.6666667%;
+						}
+					}
+				}
 			}
 		}
 	}
 	&.overlap-right-column {
-		> .inner > .multi-column-columns > .inner {
-			> .wp-block-crown-blocks-column:nth-child(1) {
-				margin-right: -20%;
-				width: 120%;
+		@include media-breakpoint-up(md) {
+			> .inner > .multi-column-columns > .inner {
+				> .wp-block-crown-blocks-column:nth-child(1) {
+					margin-right: -20%;
+					width: 120%;
+					> .inner {
+						> .wp-block-crown-blocks-container {
+							padding-right: 16.6666667%;
+						}
+					}
+				}
+				> .wp-block-crown-blocks-column:nth-child(2) > .inner > .column-contents {
+					z-index: 1;
+				}
 			}
-			> .wp-block-crown-blocks-column:nth-child(2) > .inner > .column-contents {
-				z-index: 1;
+		}
+	}
+}
+
+
+.wp-block-crown-blocks-featured-client-story-slider {
+	flex: 1 1 auto;
+	display: flex;
+	> .inner {
+		width: 100%;
+		display: flex;
+		background-color: $dark-gray;
+	}
+	.post-feed {
+		width: 100%;
+		display: flex;
+	}
+	.post-feed > .inner {
+		position: relative;
+		width: 100%;
+		&::before {
+			content: '';
+			position: absolute;
+			right: 0;
+			top: calc(50% - 1px);
+			width: 6rem;
+			border-top: 2px solid #fff;
+			z-index: 99;
+		}
+		.slick-list,
+		.slick-track {
+			height: 100%;
+		}
+		article {
+			display: flex;
+			> a {
+				width: 100%;
+				display: flex;
+				align-items: center;
+				position: relative;
+				padding-right: 6rem;
+				padding-left: 6rem;
+				color: #fff;
+				&:hover {
+					> .bg .bg-image {
+						opacity: .2;
+					}
+					.entry-title {
+						text-decoration-color: rgba($blue, 1);
+					}
+				}
+				> .bg {
+					position: absolute;
+					left: 0;
+					top: 0;
+					right: 0;
+					bottom: 0;
+					overflow: hidden;
+					background-color: $blue;
+					.bg-image {
+						position: absolute;
+						left: 0;
+						top: 0;
+						right: 0;
+						bottom: 0;
+						background-position: center;
+						background-repeat: no-repeat;
+						background-size: cover;
+						opacity: .1;
+						transition: opacity .5s;
+					}
+				}
+				> .inner {
+					position: relative;
+					width: 100%;
+					padding: 4rem;
+					@include media-breakpoint-up(sm) {
+						padding-top: 6rem;
+						padding-bottom: 6rem;
+					}
+				}
+				.entry-title {
+					transition: text-decoration-color .2s;
+					margin-bottom: 0;
+				}
+				.entry-industries {
+					display: block !important;
+					margin-top: 2rem;
+					border-bottom: 2px solid #fff;
+					padding-bottom: 1rem;
+					.industry {
+						display: inline-block;
+						line-height: 1.2;
+						font-weight: 700;
+						font-size: 0.625rem;
+						letter-spacing: .05em;
+						text-transform: uppercase;
+						border-radius: 10rem;
+						border: 1px solid #fff;
+						padding: .5rem .75rem;
+						color: inherit;
+					}
+					// a {
+					// 	transition: background-color .2s, color .2s, boder-color .2s;
+					// 	&:hover {
+					// 		background-color: #fff;
+					// 		color: #333;
+					// 	}
+					// }
+				}
+				.btn-link {
+					color: #fff;
+				}
+			}
+		}
+		.slick-arrow {
+			width: 6rem;
+			height: 8rem;
+			background-color: transparent;
+			border-radius: 0;
+			display: block;
+			opacity: .5;
+			transition: opacity .2s;
+			overflow: hidden;
+			text-indent: -10000px;
+			border: none;
+			position: absolute;
+			right: 0;
+			outline: none;
+			z-index: 100;
+			&:hover {
+				opacity: 1;
+			}
+			&.slick-prev {
+				top: calc(50% - 8rem);
+				transform: rotateY(180deg);
+			}
+			&.slick-next {
+				margin-left: 0;
+				top: 50%;
+			}
+			&::before {
+				content: '';
+				background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{#fff}" class="bi bi-chevron-compact-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"/></svg>'));
+				background-size: contain;
+				background-repeat: no-repeat;
+				position: absolute;
+				width: 2.75rem;
+				height: 2.75rem;
+				left: calc(50% - (2.75rem / 2));
+				top: calc(50% - (2.75rem / 2));
 			}
 		}
 	}
