Adding blocks for impact reports

--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -1,4 +1,10 @@
+/*
 
+	* Switch to Proxima Nova site-wide
+	* Arrow links fade up underline, drop opacity 20% on hover
+	* Language switcher in header
+
+*/
 
 #header {
 	&.is-sticky {
