--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -23474,16 +23474,21 @@ nav.pagination {
 
 /*	Header
 ---------------------------------------------------------*/
-.wp-block-crown-blocks-header > .hr-container {
+.wp-block-crown-blocks-header > .hr-container,
+.wp-block-crown-blocks-header > .header-container > .hr-container {
   width: 0; }
-  .wp-block-crown-blocks-header > .hr-container.reveal-right {
+  .wp-block-crown-blocks-header > .hr-container.reveal-right,
+  .wp-block-crown-blocks-header > .header-container > .hr-container.reveal-right {
     width: 0; }
-    .wp-block-crown-blocks-header > .hr-container.reveal-right.animated {
+    .wp-block-crown-blocks-header > .hr-container.reveal-right.animated,
+    .wp-block-crown-blocks-header > .header-container > .hr-container.reveal-right.animated {
       -webkit-transition: width .5s ease-out;
       transition: width .5s ease-out; }
 
 .wp-block-crown-blocks-header > .hr-container > hr,
-.wp-block-crown-blocks-header > hr {
+.wp-block-crown-blocks-header > hr,
+.wp-block-crown-blocks-header > .header-container > .hr-container > hr,
+.wp-block-crown-blocks-header > .header-container > hr {
   background-color: #D11141;
   background: -webkit-gradient(linear, left top, right top, from(rgba(209, 17, 65, 0)), to(#D11141));
   background: linear-gradient(to right, rgba(209, 17, 65, 0), #D11141); }
