Updating slider arrow styles

--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -438,6 +438,12 @@
 		$column-cell-selector: '> .inner > .grid-columns > .inner > .wp-block-crown-blocks-grid-cell';
 		#{$column-cell-selector} > .inner {
 			position: relative;
+			&.animated {
+				&::before {
+					bottom: 0;
+					transition: bottom ease-out .5s;
+				}
+			}
 			&:before {
 				content: '';
 				position: absolute;
@@ -445,6 +451,7 @@
 				left: 0;
 				top: 0;
 				bottom: 0;
+				bottom: 100%;
 				border-left: 4px solid $primary;
 				opacity: 1;
 				margin-left: -2px;
@@ -715,7 +722,8 @@
 			}
 			&::before {
 				content: '';
-				background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{#fff}" class="bi bi-chevron-compact-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"/></svg>'));
+				background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/></svg>'));
+
 				background-size: contain;
 				background-repeat: no-repeat;
 				position: absolute;
