--- a/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
@@ -30131,6 +30131,10 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
 
 .wp-block-crown-blocks-grid.is-style-dividers > .inner > .grid-columns > .inner > .wp-block-crown-blocks-grid-cell > .inner {
   position: relative; }
+  .wp-block-crown-blocks-grid.is-style-dividers > .inner > .grid-columns > .inner > .wp-block-crown-blocks-grid-cell > .inner.animated::before {
+    bottom: 0;
+    -webkit-transition: bottom ease-out .5s;
+    transition: bottom ease-out .5s; }
   .wp-block-crown-blocks-grid.is-style-dividers > .inner > .grid-columns > .inner > .wp-block-crown-blocks-grid-cell > .inner:before {
     content: '';
     position: absolute;
@@ -30138,6 +30142,7 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
     left: 0;
     top: 0;
     bottom: 0;
+    bottom: 100%;
     border-left: 4px solid #032040;
     opacity: 1;
     margin-left: -2px; }
@@ -30748,7 +30753,7 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
         top: 50%; }
       .wp-block-crown-blocks-featured-client-story-slider .post-feed > .inner .slick-arrow::before {
         content: '';
-        background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23fff" class="bi bi-chevron-compact-right" viewBox="0 0 16 16"%3e%3cpath fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"/%3e%3c/svg%3e');
+        background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23fff" class="bi bi-chevron-right" viewBox="0 0 16 16"%3e%3cpath fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/%3e%3c/svg%3e');
         background-size: contain;
         background-repeat: no-repeat;
         position: absolute;
