--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -197,6 +197,10 @@
 }
 
 #header-primary-cta-links {
+	@include media-breakpoint-up(md) {
+		display: flex;
+		align-items: center;
+	}
 	@include media-breakpoint-up(xl) {
 		order: 3;
 		flex: 1 1 auto;
@@ -233,7 +237,7 @@
 }
 #header-primary-cta-links #google-translate {
 	width: 50px;
-	margin-top: 0.6rem;
+	margin-top: 0;
 	margin-right: 1rem;
 	cursor: pointer;
 	&::before {
@@ -331,6 +335,7 @@
 			}
 		}
 		> .lower {
+			border-color: $darker-blue;
 			@media (min-width: 1400px) {
 				margin-left: 0;
 				margin-right: 0;
@@ -350,6 +355,7 @@
 }
 #site-footer-tagline {
 	margin: 0;
+	color: $dark-med-blue;
 }
 #site-footer-links {
 	flex: 0 0 100%;
@@ -375,7 +381,27 @@
 		}
 	}
 	li a {
-		@extend .btn-dark-med-blue;
+		@extend .btn-darker-blue;
+		text-transform: uppercase;
+		letter-spacing: .05em;
+		color: rgba(#fff, .75);
+	}
+}
+#footer .social-links {
+	h4 {
+		color: $darker-blue;
+	}
+	.menu-item {
+		a {
+			&:hover {
+				.icon svg {
+					fill: $blue;
+				}
+			}
+			.icon svg {
+				fill: $dark-blue;
+			}
+		}
 	}
 }
 #site-copyright {
@@ -410,7 +436,24 @@
 	}
 	h3 {
 		font-size: 1rem;
-		color: $primary;
+		color: $darker-blue;
+		display: flex;
+		align-items: center;
+		.icon {
+			color: $red;
+			margin-right: 0.75rem;
+			display: block;
+			width: 28px;
+			height: 28px;
+			svg {
+				width: 100%;
+				height: 100%;
+			}
+		}
+	}
+	p {
+		color: rgba($darker-blue, .5);
+		font-style: italic;
 	}
 }
 
