--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -776,6 +776,49 @@
 			}
 		}
 	}
+	&.type-pills {
+		.slick-slider-nav {
+			.slick-dots {
+				justify-content: flex-start;
+				margin: 0 -.5rem -.5rem;
+				li {
+					margin: 0 .5rem .5rem;
+					padding-bottom: 0;
+					&::after {
+						display: none;
+					}
+					&.slick-active {
+						button {
+							background-color: $light-blue;
+							border-color: $light-blue;
+						}
+					}
+				}
+				button {
+					line-height: 1.2;
+					font-weight: 700;
+					font-size: 1rem;
+					border-radius: 10rem;
+					border: 2px solid $primary;
+					padding: .5rem .75rem;
+					color: $darker-blue;
+					text-transform: none;
+					letter-spacing: 0;
+					transition: background-color .2s, border-color .2s;
+				}
+			}
+		}
+	}
+}
+.tabbed-content-image-slider {
+	.slick-slide {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		img {
+			flex: 0 0 100%;
+		}
+	}
 }
 
 
